# marble-renderable

./: CMakeLists.txt  Project Proposal.docx  README.md  project_proposal.docx
docs/: Final Report.docx  index.md
src/: callbacks.h  depthPass.cpp  depthPass.h  geomPass.cpp  geomPass.h  lightPass.cpp  lightPass.h  main.cpp  objFile.cpp  objFile.h  shader.cpp  shader.h  state.h  ui.h  window.cpp  window.h
src/shaders/: deferredPass.vs.glsl  depthPass.fs.glsl  depthPass.vs.glsl  geomPass.fs.glsl  geomPass.vs.glsl  lightPass.fs.glsl  per-fragment-phong.fs.glsl  per-fragment-phong.vs.glsl  phong.fs.glsl  phong.vs.glsl
src/util/: objFile.cpp  objFile.h  shader.cpp  shader.h  ui.h  window.cpp  window.h
